wxc/include/ewxw/wxc_glue.h

/* wxToolBar */
TClassDefExtend(wxToolBar,wxToolBarBase)
TBoolInt   wxToolBar_AddControl( TSelf(wxToolBar) _obj, TClass(wxControl) ctrl );
void       wxToolBar_AddSeparator( TSelf(wxToolBar) _obj );
void       wxToolBar_AddTool( TSelf(wxToolBar) _obj, int id, TClass(wxBitmap) bmp, TStringVoid shelp, TStringVoid lhelp );
void       wxToolBar_AddToolEx( TSelf(wxToolBar) _obj, int id, TClass(wxBitmap) bmp1, TClass(wxBitmap) bmp2, TBoolInt isToggle, TPoint(x,y), TClass(wxObject) data, TStringVoid shelp, TStringVoid lhelp );
TClass(wxToolBar) wxToolBar_Create( TClass(wxWindow) _prt, int _id, TRect(_lft,_top,_wdt,_hgt), int _stl );
void       wxToolBar_Delete( TSelf(wxToolBar) _obj );
TBoolInt   wxToolBar_DeleteTool( TSelf(wxToolBar) _obj, int id );
TBoolInt   wxToolBar_DeleteToolByPos( TSelf(wxToolBar) _obj, int pos );
void       wxToolBar_EnableTool( TSelf(wxToolBar) _obj, int id, TBool enable );
void       wxToolBar_GetMargins( TSelf(wxToolBar) _obj, TPointOutVoid(x,y) );
void       wxToolBar_GetToolBitmapSize( TSelf(wxToolBar) _obj, TSizeOutVoid(_x,_y) );
TClass(wxObject) wxToolBar_GetToolClientData( TSelf(wxToolBar) _obj, int id );
TBool      wxToolBar_GetToolEnabled( TSelf(wxToolBar) _obj, int id );
TStringLen wxToolBar_GetToolLongHelp( TSelf(wxToolBar) _obj, int id, TStringOutVoid _buf );
int        wxToolBar_GetToolPacking( TSelf(wxToolBar) _obj );
TStringLen wxToolBar_GetToolShortHelp( TSelf(wxToolBar) _obj, int id, TStringOutVoid _buf );
void       wxToolBar_GetToolSize( TSelf(wxToolBar) _obj, TPointOutVoid(_x,_y) );
TBoolInt   wxToolBar_GetToolState( TSelf(wxToolBar) _obj, int id );
void       wxToolBar_InsertControl( TSelf(wxToolBar) _obj, int pos, TClass(wxControl) ctrl );
void       wxToolBar_InsertSeparator( TSelf(wxToolBar) _obj, int pos );
void       wxToolBar_InsertTool( TSelf(wxToolBar) _obj, int pos, int id, TClass(wxBitmap) bmp1, TClass(wxBitmap) bmp2, TBoolInt isToggle, TClass(wxObject) data, TStringVoid shelp, TStringVoid lhelp );
TBoolInt   wxToolBar_Realize( TSelf(wxToolBar) _obj );
void       wxToolBar_RemoveTool( TSelf(wxToolBar) _obj, int id );
void       wxToolBar_SetMargins( TSelf(wxToolBar) _obj, TPoint(x,y) );
void       wxToolBar_SetToolBitmapSize( TSelf(wxToolBar) _obj, TSize(x,y) );
void       wxToolBar_SetToolClientData( TSelf(wxToolBar) _obj, int id, TClass(wxObject) data );
void       wxToolBar_SetToolLongHelp( TSelf(wxToolBar) _obj, int id, TStringVoid str );
void       wxToolBar_SetToolPacking( TSelf(wxToolBar) _obj, int packing );
void       wxToolBar_SetToolSeparation( TSelf(wxToolBar) _obj, int separation );
void       wxToolBar_SetToolShortHelp( TSelf(wxToolBar) _obj, int id, TStringVoid str );
void       wxToolBar_ToggleTool( TSelf(wxToolBar) _obj, int id, TBoolInt toggle );